# code-factory

./: .gitignore  .zenodo.json  AKU_STANDARD.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAILURE_ATTRIBUTION.md  LAUNCH_KIT.md  LICENSE  MANIFEST.in  MECHANICS_DEEP_DIVE.md  NOTICE  PUBLICATION_GUIDE.md  README.md  SECURITY.md  SUPPORT.md  factory.topology.json  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: first-external-run.yml  share-your-spec.yml
.github/workflows/: ci.yml  enterprise-receipts.yml  (+8 more)
adr/: 0007-target-compiler-and-local-studio.md  0008-product-missions-value-compiler.md  0009-signal-loop-and-independent-verification.md  0010-signed-capability-packs.md  0011-composable-capability-pack-catalog.md  0012-governed-instruction-learning.md  0013-receipt-backed-graph-runtime.md
context/: PROGRESS.md
docs/: AGENT_EXPERIENCE.md  APP_BUILDER.md  ARCHITECTURE.md  ASSURANCE.md  CAPABILITY_PACKS.md  COMPLIANCE.md  CONTROL_PLANE.md  DEPLOYMENT_GUIDE.md  ENTERPRISE_1_0.md  ENTERPRISE_PR_ASSURANCE.md  ENTERPRISE_RECEIPTS.md  FIRST_USE.md  HOSTED_CONTROL_PLANE.md  HOSTED_PR_ASSURANCE.md  HOW_IT_WORKS_VISUAL.md  INSTRUCTION_LEARNING.md  INTELLIJ.md  JETBRAINS_CONTROL_ROOM.md  JETBRAINS_MARKETPLACE.md  LANGGRAPH_OPS.md  LAUNCH_MEASUREMENT.md  MIGRATION_MISSIONS.md  OPERATIONS.md  OPERATION_SCENARIOS.md  PRIVACY.md  PRODUCT_HUNT_GALLERY.md  PRODUCT_MISSIONS.md  PROOFLAB.md  PROVIDER_ROUTING.md  RELEASE_CHANNELS.md  RELEASE_NOTES_0.20.0.md  SIGNAL_LOOP.md  SIGNED_RECEIPTS.md  TARGET_COMPILER.md  VERIFY_POLICY.md  VSCODE.md
envelopes/: migration-missions-v016-release.json  migration-missions-v016.json  product-missions.json
factoryline/: app_builder.py  assembly.py  assurance.py  attribution.py  boundary.py  capability_packs.py  challenge.py  cli.py  compliance.py  contract.py  control_api.py  control_plane.py  coverage.py  enterprise_receipts.py  failure_guidance.py  hosted_api.py  hosted_console.html  hosted_control.py  hosted_github.py  hosted_identity.py  hosted_storage.py  integrations.py  learning_loop.py  loop_passport.py  meter.py  migration.py  mission_graph.py  operations.py  optimizer.py  overrides.py  passport.py  pr_assurance.py  privacy.py  product_missions.py  proof.py  protocol.py  provenance.py  provider_router.py  receipt_challenge.py  refinement.py  (+6 more)
plans/: assurance-plane-foundation.md  auditability-hardening.md  capability-packs-v017.md  capability-packs.md  compliance-plane-foundation.md  control-plane-foundation.md  enterprise-pr-assurance-v1.md  enterprise-receipt-v2.md  hosted-control-plane-v1.md  hosted-pr-assurance-v1.md  operations-plane-foundation.md  privacy-plane-foundation.md  product-missions.md  receipt-graph-runtime.md  signal-loop.md  signed-receipts.md  target-compiler.md  verify-policy.md  visual-listing-v0172.md
scripts/: capture_launch_metrics.ps1  generate_builtin_packs.py  prooflab_e2e.py  render_verify_policy_gif.py
skills/: active_policy.json  lessons.jsonl
smoke/: auditability-hardening.json  capability-packs.json  enterprise-pr-assurance-v1.json  hosted-control-plane-v1.json  hosted-pr-assurance-v1.json  migration-missions-v016-release.json  migration-missions-v016.json  product-missions-v016.json  product-missions.json  receipt-graph-runtime.json  signal-loop.json  target-compiler.json  visual-listing-v0172.json
specs/: assurance-plane.md  auditability-hardening.md  auditability-hardening.ssat.yaml  capability-packs-v017.md  capability-packs.md  capability-packs.ssat.yaml  compliance-plane.md  control-plane.md  enterprise-pr-assurance-v1.md  enterprise-pr-assurance-v1.ssat.yaml  enterprise-receipt-v2.md  enterprise-receipt-v2.ssat.yaml  hosted-control-plane-v1.md  hosted-control-plane-v1.ssat.yaml  hosted-pr-assurance-v1.md  hosted-pr-assurance-v1.ssat.yaml  instruction-learning-loop.md  instruction-learning-loop.ssat.yaml  loop-passport.ssat.yaml  operations-plane.md  privacy-plane.md  product-missions.md  product-missions.ssat.yaml  receipt-graph-runtime.md  receipt-graph-runtime.ssat.yaml  signal-loop.md  signal-loop.ssat.yaml  signed-receipts.md  target-compiler.md  target-compiler.ssat.yaml  verify-policy.md  visual-listing-v0172.md  visual-listing-v0172.ssat.yaml
tests/: conftest.py  test_adoption_assets.py  test_assurance.py  test_canonical_properties.py  test_capability_packs.py  test_compliance.py  test_control_plane.py  test_enterprise_receipts.py  test_factoryline.py  test_hosted_adapter.py  test_hosted_console.py  test_hosted_control.py  test_hosted_postgres.py  test_huggingface_surface.py  test_integrations.py  test_learning_loop.py  test_loop_passport.py  test_migration.py  test_mission_graph.py  test_operations.py  test_pr_assurance.py  test_privacy.py  test_product_missions.py  test_provider_router.py  test_public_docstrings.py  test_publication_metadata.py  test_receipt_challenge.py  test_signal_loop.py  test_signed_receipts.py  test_studio.py  test_target_compiler.py  test_visual_listing.py
(+155 files in other folders)
