[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "factoryline-code-factory"
version = "0.13.4"
description = "The connective layer that snaps SpecLine, ForgeLine, HSF and Prestige together into one spec-to-artifact assembly line. Each module stays independent; factoryline lines them up."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT OR Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/zrk222/code-factory"
Documentation = "https://github.com/zrk222/code-factory#readme"
Issues = "https://github.com/zrk222/code-factory/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
sigstore = ["sigstore>=4.4,<5"]
enterprise = ["cryptography>=42,<50"]

[project.scripts]
factory = "factoryline.cli:main"

[tool.setuptools]
packages = ["factoryline"]
