[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "factoryline-code-factory"
version = "0.19.0"
description = "A proof-first software factory with authenticated PR assurance, signed receipts, supervised tenant control, and an optional hosted PostgreSQL/GitHub adapter."
authors = [
  { name = "Richard Katz" },
  { email = "rkatz22@gmail.com" },
]
maintainers = [
  { name = "Richard Katz" },
  { email = "rkatz22@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
  "software-factory",
  "ai-agents",
  "mutation-testing",
  "release-evidence",
  "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["cryptography>=42,<50"]

[project.urls]
Homepage = "https://github.com/zrk222/code-factory"
Documentation = "https://github.com/zrk222/code-factory#readme"
Source = "https://github.com/zrk222/code-factory"
Issues = "https://github.com/zrk222/code-factory/issues"
Changelog = "https://github.com/zrk222/code-factory/releases"

[project.optional-dependencies]
dev = [
  "hypothesis>=6.135,<7",
  "pytest>=8.0",
  "tomli>=2.0; python_version < '3.11'",
]
sigstore = ["sigstore>=4.4,<5"]
enterprise = ["cryptography>=42,<50"]
hosted = [
  "gunicorn>=23,<24; platform_system != 'Windows'",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
]

[project.scripts]
factory = "factoryline.cli:main"

[tool.setuptools]
packages = ["factoryline", "factoryline.builtin_packs"]

[tool.setuptools.package-data]
factoryline = ["builtin_packs/**/*", "hosted_console.html"]
